--- a/index.html
+++ b/index.html
@@ -70,21 +70,16 @@
 
         </div>
 
-        <!-- <div class="col-lg-10 ">
-          
-        </div>
-
-        <div class="col-lg-10 fa4-align-right">
-          <img class="naranjas-izquierda" src="./img/logos_iconos/Recurso10.png">
-        </div> -->
-
+        
       </div>
 
     </div>
-
+    <img class="naranjas-izquierda"  src="./img/logos_iconos/Recurso12.png">
+    <img class="naranjas-derecha"  src="./img/logos_iconos/Recurso13.png">
 
   </header>
-  <!-- <img class="naranjas-izquierda"  src="./img/logos_iconos/Recurso10.png"> -->
+
+
 
 
 
@@ -187,7 +182,7 @@
           <div class="mt-5">
             <img class="ventajas" src="./img/logos_iconos/Recurso4.png" alt="">
 
-            <p class="text-muted mb-0 text-plomo text-align-center" style="padding-left: 6em;padding-right: 6em;">
+            <p class="text-muted mb-0 text-plomo text-center" >
               Garantiza la sanidad de sus envases
               con un servicio Profesional.</p>
           </div>
