--- a/index.html
+++ b/index.html
@@ -109,6 +109,17 @@
 
       </div>
     </div>
+
+    
+  </section>
+  <section class="page-section2 bg-oferta2">
+    <div class="container2">
+      <div class="row justify-content-center">
+
+      </div>
+    </div>
+
+    
   </section>
 
   <!-- Bebidas Section -->
@@ -279,7 +290,7 @@
   <!-- Footer -->
   <footer class="bg-light py-2">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2020 - Castelo S.A.</div>
+      <div class="small text-center text-muted">Copyright &copy; 2020 - Castelo Soluciones</div>
     </div>
   </footer>
 
