empezando pequeños cambios

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
 
 
   <!-- About Section -->
-  <section class="page-section2 bg-primary" id="nosotros">
+  <section class="page-section22 bg-primary" id="nosotros">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class=" mt-0 text-azul">Nuestra empresa</h2>
+          <h2 class=" mt-0 text-azul">NUESTRA EMPRESA</h2>
           <hr class="divider light my-4">
           <p class="mb-4 text-plomo mitext">Cuando confías en la empresa líder en distribución de agua para empresas, se
             vive mejor.
@@ -113,30 +113,28 @@
 
 
   </section>
-  <section class="page-section2 bg-oferta2">
-    <div class="container2">
-      <div class="row justify-content-center">
-
-      </div>
-    </div>
-
-
-  </section>
-
+ 
   <!-- Bebidas Section -->
   <section class="page-section" id="productos">
     <div class="container">
       <h2 class="text-center mt-0 text-azul">DESCUBRE NUESTRAS BEBIDAS</h2>
 
       <div class="row">
-        <div class="col-lg-6 col-md-6 text-center">
+        <div class="col-lg-4 col-md-6 text-center">
           <div class="mt-5">
             <img class="productos" src="./img/logos_iconos/botellla.PNG" alt="">
             <h3 class="h4 mb-2 text-azul">BIDÓN DE AGUA</h3>
             <p class=" mb-0 text-plomo">20 LITROS</p>
           </div>
         </div>
-        <div class="col-lg-6 col-md-6 text-center">
+        <div class="col-lg-4 col-md-6 text-center">
+          <div class="mt-5">
+            <img class="productos" src="./img/logos_iconos/Recurso14.png" alt="" >
+            <h3 class="h4 mb-2 text-azul">BIDÓN DE AGUA</h3>
+            <p class=" mb-0 text-plomo">10 LITROS</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 text-center">
           <div class="mt-5">
             <img class="productos" src="./img/logos_iconos/caja.PNG" alt="">
             <h3 class="h4 mb-2 text-azul">CAJA DE AGUA</h3>
