--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body id="page-top">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-2-5" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top"> <img id="logo" class="logo-navbar"
           src="./img/logos_iconos/Recurso2.png"></a>
