cambiando imagen en pantalla completa

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <a class="nav-link js-scroll-trigger text-azul" href="#nosotros">Nosotros</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger text-azul" href="#oferta">Promociones</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger text-azul" href="#productos">Productos</a>
           </li>
           <li class="nav-item">
@@ -104,7 +107,7 @@
 
 
   <!-- Oferta section -->
-  <section class="page-section2 bg-oferta1">
+  <section class="page-section2 bg-oferta1" id="oferta">
     <div class="container2">
       <div class="row justify-content-center">
 
@@ -257,7 +260,7 @@
   <section class="page-section2 bg-contacto" id="contactanos">
     <div class="container-formulario">
       <form id="contact" action="" method="post">
-        <h3 class="text-azul" style="text-align: center">Contactanos</h3>
+        <h3 class="text-azul" style="text-align: center">CONTÁCTANOS</h3>
 
         <fieldset>
           <input placeholder="Nombre" type="text" tabindex="1" required>
