--- a/index.html
+++ b/index.html
@@ -24,22 +24,75 @@
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="css/creative.css" rel="stylesheet">
   <style>
-    #flotante {
+    /* #flotante {
       display: none;
-    }
+    } */
   </style>
 
 </head>
 
 <body id="page-top">
 
+<!-- Modal para proceso de sunqu -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div  class="modal-body">
+          <img id="imagen-modal1"
+            src="./img/procesos/sunquhorizontal.jpg"
+            style="width:100%">
+        </div>
 
-  <a href="./pedidos.html" target="_blank" class="float" id="flotante">
+      </div>
+    </div>
+  </div>
+
+<!-- Modal para proceso de organica -->
+<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+aria-hidden="true">
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div  class="modal-body">
+      <img id="imagen-modal2"
+        src="./img/procesos/organicahorizontal.jpg"
+        style="width:100%">
+    </div>
+
+  </div>
+</div>
+</div>
+  <!-- <a href="./pedidos.html" target="_blank" class="float" id="flotante">
     <p class="texto-vertical-1">HAZ TU PEDIDO</p>
-  </a>
+  </a> -->
+
+  <div class="float-pedido" id="flotante">
+    <div class="div row">
+      <div class="div col-2 ">
+        <i class="fas fa-phone-alt"></i>
+      </div>
+      <div class="div col-10">
+        <p style="font-size: 1rem; margin-bottom: 0px!important;">958 954 744</p>
+        <p style="font-size: 0.8rem;">Pide por teléfono</p>
+      </div>
+
+    </div>
+
+  </div>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-2-5" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-2"
+    style="padding-top: 0px!important;padding-bottom: 0px!important;" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top"> <img id="logo" class="logo-navbar"
           src="./img/logos_iconos/Recurso22.png"></a>
@@ -72,7 +125,7 @@
           </li>
         </ul>
       </div>
-      <button class="btn btn-danger" type="button">PIDE ONLINE</button>
+      <button class="btn btn-rojo" type="button">PIDE ONLINE<img src="./img/logos_iconos/Recurso25.png" style="max-width: 1rem;" alt=""></button>
 
       </button>
     </div>
@@ -81,7 +134,7 @@
 
   <!-- Masthead -->
   <header class="masthead">
-    <div class="container h-100">
+    <div class="container2 h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 fa4-align-center">
           <img class="logo-organica" src="./img/logos_iconos/Recurso21.png">
@@ -104,7 +157,7 @@
 
   <!-- About Section -->
   <section class="page-section22 bg-primary" id="nosotros">
-    <div class="container">
+    <div class="container2">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
           <h2 class=" mt-0 text-azul">NUESTRA EMPRESA</h2>
@@ -133,14 +186,16 @@
 
   <!-- Bebidas Section -->
   <section class="page-section-productos" id="productos">
-    <div class="container">
+    <div class="container2">
       <h2 class="text-center my-2 text-azul">DESCUBRE NUESTRAS BEBIDAS</h2>
 
       <div class="div row my-3">
+
         <!-- primer bloque de productos sunqu -->
         <div class="div col-lg-6">
           <div class="div row text-center">
-            <div class="div col-lg-12"> <a class="text-center" href="#page-top"> <img id="logo" style="width:8rem;"
+           
+            <div class="div col-lg-12"> <a class="text-center" data-toggle="modal" data-target="#exampleModal"> <img id="logo" style="width:8rem;"
                   src="./img/logos_iconos/Recurso23.png"></a>
             </div>
             <p class=" mb-0 div col-lg-12 text-plomo text-center">Agua de mesa</p>
@@ -156,9 +211,9 @@
             </div>
             <div class="col-lg-6 col-md-6 text-center">
               <div class="mt-5">
-                <img class="productos" src="./img/logos_iconos/Recurso14.png" alt="">
+                <img class="productos" src="./img/logos_iconos/CAJA-SUNQU-3D.png" alt="">
                 <h3 class="h4 mb-2 text-azul">CAJA DE AGUA</h3>
-                <p class=" mb-0 text-plomo">10 LITROS</p>
+                <p class=" mb-0 text-plomo">20 LITROS</p>
               </div>
             </div>
           </div>
@@ -166,7 +221,7 @@
         <!-- segundo bloque de productos organica -->
         <div class="div col-lg-6">
           <div class="div row text-center">
-            <div class="div col-lg-12"> <a class="text-center" href="#page-top"> <img id="logo" style="width:12rem;"
+            <div class="div col-lg-12"> <a class="text-center" data-toggle="modal" data-target="#exampleModal2" href=""> <img id="logo" style="width:12rem;"
                   src="./img/logos_iconos/Recurso22.png"></a>
             </div>
             <p class=" mb-0 div col-lg-12 text-plomo text-center">Agua funcional</p>
@@ -181,7 +236,7 @@
             </div>
             <div class="col-lg-4 col-md-6 text-center">
               <div class="mt-5">
-                <img class="productos" src="./img/logos_iconos/Recurso24.png" alt="">
+                <img class="productos" src="./img/logos_iconos/CAJA-ORGANICA-3D.png" alt="">
                 <h3 class="h4 mb-2 text-azul">CAJA DE AGUA</h3>
                 <p class=" mb-0 text-plomo">20 LITROS</p>
               </div>
@@ -198,13 +253,7 @@
 
       </div>
     </div>
-
-
-
-
-
-
-  </section>
+ </section>
 
   <!-- Ventajas Section -->
   <section class="bg-ventajas" id="ventajas">
@@ -213,14 +262,11 @@
     <div class="container2" style="padding: 1rem; ">
       <div class="card border-0 shadow " style="background-color: rgba(255, 255, 255, 0.8);">
         <div class="card-body p-5">
-
           <h2 class="text-center mt-0 text-azul">VENTAJAS</h2>
-
           <div class="row">
             <div class="col-lg-4 col-md-6 text-center">
               <div class="mt-5">
                 <img class="ventajas" src="./img/logos_iconos/Recurso7.png" alt="">
-
                 <p class="mb-0 text-plomo text-align-center">Eficacia en el reparto de agua para
                   oficinas, industrias e instituciones.</p>
               </div>
@@ -228,25 +274,20 @@
             <div class="col-lg-4 col-md-6 text-center">
               <div class="mt-5">
                 <img class="ventajas" src="./img/logos_iconos/Recurso5.png" alt="">
-
                 <p class="mb-4 text-plomo">Servicio de reparto diario en el día
                   y hora acordado.</p>
               </div>
             </div>
-
             <div class="col-lg-4 col-md-6 text-center">
               <div class="mt-5">
                 <img class="ventajas" src="./img/logos_iconos/Recurso6.png" alt="">
-
                 <p class="mb-0 text-plomo">Tanto el personal como los vehículos
                   se encuentran identificados.</p>
               </div>
             </div>
-
             <div class="col-lg-6 col-md-6 text-center">
               <div class="mt-5">
                 <img class="ventajas ayuda" src="./img/logos_iconos/Recurso4.png" alt="">
-
                 <p class="mb-0 text-plomo text-center ayuda">
                   Garantiza la sanidad de sus envases
                   con un servicio Profesional.</p>
@@ -364,6 +405,14 @@
   <script src="js/creative.min.js"></script>
 
   <script>// esta parte, permite que se ejecute el codigo cuando se halla cargado la pagina
+    var ancho=screen.width;
+    if(ancho<700){
+      $('#imagen-modal1').attr('src', './img/procesos/sunquvertical.jpg');
+  
+    }
+    if(ancho<700){
+      $('#imagen-modal2').attr('src', './img/procesos/organicavertical.jpg')      
+    }
     $(function () {
       // esta parte es la que controla cuando se mueve el scroll y ejecuta una función
       $(document).scroll(function () {
@@ -376,11 +425,11 @@
         if ($(this).scrollTop() < 1) {
           $('#logo').attr('src', './img/logos_iconos/Recurso23.png');
         }
-        if ($(this).scrollTop() < 11) {
-          document.getElementById('flotante').style.display = 'none';
-        }
-        if ($(this).scrollTop() >= 11) {
+        if ($(this).scrollTop() < 21) {
           document.getElementById('flotante').style.display = 'block';
+        }
+        if ($(this).scrollTop() >= 21) {
+          document.getElementById('flotante').style.display = 'none';
         }
       });
     });</script>
