cambios casi finales se descuador un poco ventajas

--- a/pedidos.html
+++ b/pedidos.html
@@ -124,9 +124,11 @@
         
                                         <select class="custom-select d-block w-100" id="tipo" name="tipo" required >
                                             <option value="">Seleccione producto...</option>
-                                            <option class="myoption">Bidón de 20 litros</option>
-                                            <option class="myoption">Caja de 20 litros</option>
-                                            <option class="myoption">Bidón de 10 litros</option>
+                                            <option class="myoption">Bidón de 20 litros Sunqu</option>
+                                            <option class="myoption">Caja de 20 litros Sunqu</option>
+                                            <option class="myoption">Bidón de 10 litros Organica</option>
+                                            <option class="myoption">Caja de agua 20 litros Organica</option>
+                                            <option class="myoption">Botella personal 500 ml</option>
         
                                         </select>
                                         <div class="invalid-feedback">
