--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body id="page-top">
 
-<!-- Modal para proceso de sunqu -->
+  <!-- Modal para proceso de sunqu -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -43,35 +43,31 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div  class="modal-body">
-          <img id="imagen-modal1"
-            src="./img/procesos/sunquhorizontal.jpg"
-            style="width:100%">
+        <div class="modal-body">
+          <img id="imagen-modal1" src="./img/procesos/sunquhorizontal.jpg" style="width:100%">
         </div>
 
       </div>
     </div>
   </div>
 
-<!-- Modal para proceso de organica -->
-<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-aria-hidden="true">
-<div class="modal-dialog" role="document">
-  <div class="modal-content">
-    <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div  class="modal-body">
-      <img id="imagen-modal2"
-        src="./img/procesos/organicahorizontal.jpg"
-        style="width:100%">
-    </div>
+  <!-- Modal para proceso de organica -->
+  <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <img id="imagen-modal2" src="./img/procesos/organicahorizontal.jpg" style="width:100%">
+        </div>
 
+      </div>
+    </div>
   </div>
-</div>
-</div>
   <!-- <a href="./pedidos.html" target="_blank" class="float" id="flotante">
     <p class="texto-vertical-1">HAZ TU PEDIDO</p>
   </a> -->
@@ -91,8 +87,7 @@ aria-hidden="true">
   </div>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-2"
-    style="padding-top: 0px!important;padding-bottom: 0px!important;" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 auxilio" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top"> <img id="logo" class="logo-navbar"
           src="./img/logos_iconos/Recurso22.png"></a>
@@ -121,11 +116,12 @@ aria-hidden="true">
             <a class="nav-link js-scroll-trigger text-azul" href="#pedidos">Pedidos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger text-azul" href="#contactanos">Contactanos</a>
+            <a class="nav-link js-scroll-trigger text-azul" href="#contactanos">Contáctanos</a>
           </li>
         </ul>
       </div>
-      <button class="btn btn-rojo" type="button">PIDE ONLINE<img src="./img/logos_iconos/Recurso25.png" style="max-width: 1rem;" alt=""></button>
+      <button id="pedir" class="btn btn-rojo" type="button">PIDE ONLINE<img src="./img/logos_iconos/Recurso25.png"
+          style="max-width: 1rem;" alt=""></button>
 
       </button>
     </div>
@@ -187,16 +183,16 @@ aria-hidden="true">
   <!-- Bebidas Section -->
   <section class="page-section-productos" id="productos">
     <div class="container2">
-      <h2 class="text-center my-2 text-azul">DESCUBRE NUESTRAS BEBIDAS</h2>
+      <h2 class="text-center my-1 text-azul">DESCUBRE NUESTRAS BEBIDAS</h2>
 
-      <div class="div row my-3">
+      <div class="div row my-2">
 
         <!-- primer bloque de productos sunqu -->
-        <div class="div col-lg-6">
+        <div class="div col-lg-5">
           <div class="div row text-center">
-           
-            <div class="div col-lg-12"> <a class="text-center" data-toggle="modal" data-target="#exampleModal"> <img id="logo" style="width:8rem;"
-                  src="./img/logos_iconos/Recurso23.png"></a>
+
+            <div class="div col-lg-12"> <a class="text-center" data-toggle="modal" data-target="#exampleModal"> <img
+                  id="logo" style="width:8rem;" src="./img/logos_iconos/Recurso23.png"></a>
             </div>
             <p class=" mb-0 div col-lg-12 text-plomo text-center">Agua de mesa</p>
 
@@ -218,11 +214,15 @@ aria-hidden="true">
             </div>
           </div>
         </div>
+        <div class="div col-lg-1 ocultar">
+          <div class="vl2"></div>
+      </div>
+
         <!-- segundo bloque de productos organica -->
         <div class="div col-lg-6">
           <div class="div row text-center">
-            <div class="div col-lg-12"> <a class="text-center" data-toggle="modal" data-target="#exampleModal2" href=""> <img id="logo" style="width:12rem;"
-                  src="./img/logos_iconos/Recurso22.png"></a>
+            <div class="div col-lg-12"> <a class="text-center" data-toggle="modal" data-target="#exampleModal2" href="">
+                <img id="logo" style="width:12rem;" src="./img/logos_iconos/Recurso22.png"></a>
             </div>
             <p class=" mb-0 div col-lg-12 text-plomo text-center">Agua funcional</p>
           </div>
@@ -249,11 +249,28 @@ aria-hidden="true">
               </div>
             </div>
           </div>
+
+          <div class="div row text-center" style="margin: 1rem; text-align: left!important;">
+
+            <p class="  text-plomo" style="font-size: 0.9rem;">
+              <img src="./img/logos_iconos/Recurso26.png" style="max-width: 15px;" alt="">
+              <span class="text-naranja">ACTIVADOR SISTEMA INMUNOLÓGICO</span> Contiene extractos de:
+              naranja, hierba luisa, canela y jengibre</p>
+            <p class="  text-plomo" style="font-size: 0.9rem;">
+              <img src="./img/logos_iconos/Recurso26.png" style="max-width: 15px;" alt="">
+              <span class="text-naranja">ADELGAZANTE</span> Contiene extractos de: hierba luisa, apio, jengibre</p>
+
+            <p class="  text-plomo" style="font-size: 0.9rem;">
+              <img src="./img/logos_iconos/Recurso26.png" style="max-width: 15px;" alt="">
+              <span class="text-naranja">RELAJANTE-DIGESTIVO</span> Contiene extractos de: Clavo, muña y
+              hierba buena</p>
+
+          </div>
         </div>
 
       </div>
     </div>
- </section>
+  </section>
 
   <!-- Ventajas Section -->
   <section class="bg-ventajas" id="ventajas">
@@ -318,7 +335,7 @@ aria-hidden="true">
 
   <!-- Services Section -->
   <section class="page-section" id="pedidos">
-    <div class="container">
+    <div class="container2">
       <h2 class="text-center mt-0 text-azul">CENTROS DE ATENCIÓN</h2>
       <P class="text-center mt-0 text-plomo">Alcance de distribución, pedidos o consultas:</P>
 
@@ -405,14 +422,19 @@ aria-hidden="true">
   <script src="js/creative.min.js"></script>
 
   <script>// esta parte, permite que se ejecute el codigo cuando se halla cargado la pagina
-    var ancho=screen.width;
-    if(ancho<700){
+    var ancho = screen.width;
+    if (ancho < 700) {
       $('#imagen-modal1').attr('src', './img/procesos/sunquvertical.jpg');
-  
+
     }
-    if(ancho<700){
-      $('#imagen-modal2').attr('src', './img/procesos/organicavertical.jpg')      
+    if (ancho < 700) {
+      $('#imagen-modal2').attr('src', './img/procesos/organicavertical.jpg')
     }
+    $(function () {
+      $('#pedir').click(function () {
+        window.location='pedidos.html';
+      });
+    });
     $(function () {
       // esta parte es la que controla cuando se mueve el scroll y ejecuta una función
       $(document).scroll(function () {
