cambios casi finales se descuador un poco ventajas

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             </div>
             <div class="col-lg-4 col-md-6 text-center">
               <div class="mt-5">
-                <img class="productos" src="./img/logos_iconos/botella.PNG" alt="">
+                <img class="productos" src="./img/logos_iconos/botella.png" alt="">
                 <h3 class="h4 mb-2 text-azul">BOTELLA PERSONAL</h3>
                 <p class=" mb-0 text-plomo">500 ML</p>
               </div>
